cassandra/4.0/modules/ROOT/pages/cassandra-connector-reference.adoc
= Apache Cassandra Connector 4.0 Reference - Mule 4
:page-aliases: connectors::cassandra/cassandra-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Cassandra (Cassandra Connector) implements the DataStax Java Driver for Apache Cassandra 3.1.

Release Notes: xref:release-notes::connector/cassandra-connector-release-notes-mule-4.adoc[Cassandra Connector Release Notes]

== Configurations
---
[[config]]
=== Config

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
 | Connection authentication types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types

[[config_connection]]
===== Connection

====== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Host a| String |  Host name or IP address |  |
| Endpoint identification algorithm a| Enumeration, one of:

** HTTPS
** LDAPS |  The endpoint identification algorithm used by clients to validate the server host name. The default value is an empty string, which means that the algorithm is disabled. Clients, including client connections created by the broker for inter-broker communication, verify that the broker host name matches the host name in the broker's certificate. |  HTTPS |
| Port a| String |  Port |  9042 |
| Cassandra Keyspace a| String |  Cassandra keyspace |   |
| Cassandra Cluster Name a| String |  Cassandra cluster name |  |
| Cassandra Cluster Nodes a| String |  Cassandra cluster nodes (IP or host address and port separated by commas, for example, `host1:port1`, `host2:port2`). If the port is not specified, the connector uses the default port, `9042`. When you specify this parameter, the host and port from the general settings are ignored. |  |
| Username a| String | Username for authentication. |   |
| Password a| String | Password for authentication. If the password is null or all white spaces, the connector won't use authentication. In this case, the username must also be empty.|  |
| Protocol Version a| Enumeration, one of:

** V1
** V2
** V3
** V4 |  Version of the native protocol supported by the driver. |  |
| Max Schema Agreement Wait Seconds a| Number |  The maximum time to wait for a schema agreement before returning from a DDL query. |  0 |
| Compression a| Enumeration, one of:

** LZ4
** NONE
** SNAPPY|  The compression to use for the transport. |  |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations
* <<addNewColumn>>
* <<changeColumnType>>
* <<createKeyspace>>
* <<createTable>>
* <<deleteColumnsValue>>
* <<deleteRows>>
* <<dropColumn>>
* <<dropKeyspace>>
* <<dropTable>>
* <<executeCQLQuery>>
* <<getTableNamesFromKeyspace>>
* <<insert>>
* <<renameColumn>>
* <<select>>
* <<update>>

== Operations

[[addNewColumn]]
=== Add New Table Column
`<cassandra-db:add-new-column>`

Adds a new column

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table to use for the operation |  | x
| Keyspace Name a| String |  The keyspace that contains the table to use |  |
| Alter Column Input a| <<AlterColumnInput>> |  POJO defining the name of the new column and its data type |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[changeColumnType]]
=== Change Column Type
`<cassandra-db:change-column-type>`

Changes the type of a column. To check compatibility, see http://docs.datastax.com/en/cql/3.1/cql/cql_reference/cql_data_types_c.html#concept_ds_wbk_zdt_xj__cql_data_type_compatibility[CQL type compatibility].

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table to use for the operation |  | x
| Keyspace Name a| String |  (optional) The keyspace that contains the table to use |  |
| Alter Column Input a| <<AlterColumnInput>> |  POJO defining the name of the column to change and the new data type |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[createKeyspace]]
=== Create Keyspace
`<cassandra-db:create-keyspace>`

Creates a new keyspace

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Input a| <<CreateKeyspaceInput>> |  Operation input containing the keyspace name and the replication details |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[createTable]]
=== Create Table
`<cassandra-db:create-table>`

Creates a table (column family) in a specific keyspace. If you don't specify a keyspace, the connector uses the keyspace used for login.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Create Table Input a| <<CreateTableInput>> |  The *Create Table Input* operation, which specifies the table name, keyspace name, and list of columns. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[deleteColumnsValue]]
=== Delete Columns Value
`<cassandra-db:delete-columns-value>`

Deletes values from an object specified by the Where clause

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table |  | x
| Keyspace Name a| String | The keyspace that contains the table to use |  |
| Entities a| Array of String |  The columns to delete |  | x
| Where Clause a| Object |  |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[deleteRows]]
=== Delete Rows
`<cassandra-db:delete-rows>`

Deletes an entire record

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table |  | x
| Keyspace Name a| String |  The keyspace that contains the table to use |  |
| Where Clause a| Object |  The Where clause for the *Delete* operation |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[dropColumn]]
=== Drop Column
`<cassandra-db:drop-column>`

Removes a column

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table to use for the operation |  | x
| Keyspace Name a| String |  The keyspace that contains the table to use |  |
| Column Name a| String |  The name of the column to removed |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[dropKeyspace]]
=== Drop Keyspace
`<cassandra-db:drop-keyspace>`

Drops the entire keyspace

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Keyspace Name a| String |  The name of the keyspace to drop |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[dropTable]]
=== Drop Table
`<cassandra-db:drop-table>`

Drops an entire table form the specified keyspace or from the keyspace used for login if no keyspace is specified as an operation parameter.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table Name a| String |  The name of the table to drop |  #[payload] |
| Keyspace Name a| String |  The keyspace that contains the table to drop |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[executeCQLQuery]]
=== Execute CQL Query
`<cassandra-db:execute-cql-query>`

Executes the specified raw input query

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Cql Input a| <<CQLQueryInput>> |  CQL query input that describes the parametrized query to execute along with the query parameters |  #[payload] |
| Target Variable a| String |  Name of the variable in which to store the operation's output|  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[getTableNamesFromKeyspace]]
=== Get All Table Names From Keyspace
`<cassandra-db:get-table-names-from-keyspace>`

Returns all table names from the specified keyspace

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Keyspace Name a| String |  The name of the keyspace to use on the operation |  |
| Target Variable a| String |  Name of the variable in which to store the operation's output|  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[insert]]
=== Insert Entity
`<cassandra-db:insert>`

Executes the Insert Entity operation

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table in which to insert the entity |  | x
| Keyspace Name a| String |  The keyspace that contains the table to use |  |
| Entity To Insert a| Object |  The entity to insert |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[renameColumn]]
=== Rename Column
`<cassandra-db:rename-column>`

Renames a column

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table to use for the operation |  | x
| Keyspace Name a| String | The keyspace that contains the table to use |  |
| Old Column Name a| String |  The name of the column to change |  #[payload] |
| New Column Name a| String |  The new name of the column  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[select]]
=== Select
`<cassandra-db:select>`

Executes a select query

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query to execute |  #[payload] |
| Parameters a| Array of Any |  The query parameters |  |
| Target Variable a| String |  Name of the variable in which to store the operation's output|  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

[[update]]
=== Update  Entity
`<cassandra-db:update>`

Executes the update entity operation

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Table a| String |  The name of the table in which the entity is updated |  | x
| Keyspace Name a| String |  The keyspace that contains the table to drop|  |
| Entity To Update a| Object |  The entity to update |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations
* <<config>>

==== Throws
* CASSANDRA-DB:ALREADY_EXISTS
* CASSANDRA-DB:AUTHENTICATION
* CASSANDRA-DB:BOOTSTRAPPING
* CASSANDRA-DB:BUSY_CONNECTION
* CASSANDRA-DB:BUSY_POOL
* CASSANDRA-DB:CASSANDRA_EXCEPTION
* CASSANDRA-DB:CASSANDRA_EXECUTION
* CASSANDRA-DB:CODEC_NOT_FOUND
* CASSANDRA-DB:CONNECTION
* CASSANDRA-DB:CONNECTIVITY
* CASSANDRA-DB:DRIVER_INTERNAL_ERROR
* CASSANDRA-DB:FRAME_TOO_LONG
* CASSANDRA-DB:FUNCTION_EXECUTION
* CASSANDRA-DB:INVALID_CONFIGURATION_IN_QUERY
* CASSANDRA-DB:INVALID_QUERY
* CASSANDRA-DB:INVALID_TLS_CONFIGURATION
* CASSANDRA-DB:INVALID_TYPE
* CASSANDRA-DB:NO_HOST_AVAILABLE
* CASSANDRA-DB:OPERATION_TIMED_OUT
* CASSANDRA-DB:OVERLOADED
* CASSANDRA-DB:PAGING_STATE
* CASSANDRA-DB:PROTOCOL_ERROR
* CASSANDRA-DB:QUERY_CONSISTENCY
* CASSANDRA-DB:QUERY_ERROR
* CASSANDRA-DB:READ_FAILURE
* CASSANDRA-DB:READ_TIMEOUT
* CASSANDRA-DB:RETRY_EXHAUSTED
* CASSANDRA-DB:SERVER_ERROR
* CASSANDRA-DB:SYNTAX_ERROR
* CASSANDRA-DB:TRACE_RETRIEVAL
* CASSANDRA-DB:TRANSPORT
* CASSANDRA-DB:TRUNCATE
* CASSANDRA-DB:UNAUTHORIZED
* CASSANDRA-DB:UNAVAILABLE
* CASSANDRA-DB:UNPREPARED
* CASSANDRA-DB:UNRESOLVED_USER_TYPE
* CASSANDRA-DB:UNSUPPORTED_FEATURE
* CASSANDRA-DB:UNSUPPORTED_PROTOCOL_VERSION
* CASSANDRA-DB:WRITE_FAILURE
* CASSANDRA-DB:WRITE_TIMEOUT

== Types
[[Tls]]
=== TLS

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which is resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which is resolved relative to the current classpath and file system, if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key to use. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often, in milliseconds, to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the Max Idle Time attribute |  |
|===

[[AlterColumnInput]]
=== Alter Column Input

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Column a| String |  |  |
| Type a| Enumeration, one of:

** ASCII
** BIGINT
** BLOB
** BOOLEAN
** COUNTER
** DATE
** DECIMAL
** DOUBLE
** FLOAT
** INET
** INT
** SMALLINT
** TEXT
** TIME
** TIMESTAMP
** TIMEUUID
** TINYINT
** UUID
** VARCHAR
** VARINT |  |  |
|===

[[CreateKeyspaceInput]]
=== Create Keyspace Input

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| First Data Center a| <<DataCenter>> |  |  |
| Keyspace Name a| String |  |  |
| Next Data Center a| <<DataCenter>> |  |  |
| Replication Factor a| Number |  |  |
| Replication Strategy Class a| Enumeration, one of:

** SimpleStrategy
** NetworkTopologyStrategy |  |  |
|===

[[DataCenter]]
=== Data Center

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  |
| Value a| Number |  |  |
|===

[[CreateTableInput]]
=== Create Table Input

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Columns a| Array of <<ColumnInput>> |  |  |
| Keyspace Name a| String |  |  |
| Table Name a| String |  |  |
|===

[[ColumnInput]]
=== Column Input

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  |
| Primary Key a| Boolean |  |  |
| Type a| Enumeration, one of:

** ASCII
** BIGINT
** BLOB
** BOOLEAN
** COUNTER
** DATE
** DECIMAL
** DOUBLE
** FLOAT
** INET
** INT
** SMALLINT
** TEXT
** TIME
** TIMESTAMP
** TIMEUUID
** TINYINT
** UUID
** VARCHAR
** VARINT |  |  |
|===

[[CQLQueryInput]]
=== CQL Query Input

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Cql Query a| String |  |  |
| Parameters a| Array of Any |  |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
